--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>Agence La Panthère</title>
 
     
 <!-- Analytics -->
@@ -222,7 +222,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br>
+					Agence La Panthère - Agence web basée à Lyon<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
